# entiende_tu_derecho_backend

./: .cursorrules  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  THREAD_ID_GUIDE.md  pyproject.toml
app/: __init__.py
app/agents/: __init__.py  graph.py  nodes.py  state.py
app/api/: __init__.py  deps.py  main.py
app/api/v1/: __init__.py  analyze.py  history.py
app/core/: __init__.py  checkpointer.py  config.py  supabase_client.py
app/models/: __init__.py
app/services/: __init__.py  ocr.py
scripts/: create_user_analyses_table.sql  reset_checkpoint_tables.sql  setup_rls_policies.sql  update_user_analyses_table.sql
tests/: __init__.py
